@@ -2384,6 +2384,7 @@ Piotr Kow <pkow88776 at onet dot pl>
 Yogesh Sharma <Yogesh dot Sharma at saabsensis dot com>
 Mike McKnerney <michael dot mcknerney at baesystems dot com>
 Mike Ketchen <mketchen at broadsoft dot com>
+Erik Sohns <erik dot sohns at web dot de>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
